[tool.poetry]
name = "nature-exporter"
version = "0.1.0"
description = ""
authors = ["sky <skyblue3350@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
prometheus_client = "^0.7.1"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
